# Calidad-PQRS

./: .gitignore  README.md  pyproject.toml  pytest.ini
Evaluation/: validate_model.py
Homework/: Causas.ipynb  Procesos.ipynb  predict.ipynb
Input/Filter4/: dict.json
Input/Thresholds/: causes_thresholds.parquet  process_thresholds.parquet
Output/: descontento_producto.json  dicts.json
Test/: __init__.py  conftest.py
Test/unit/: test_config.py  test_utils.py
Test/unit/test_models/: test_predict.py  test_preprocessing.py  test_validation.py
src/calidad_pqrs/: config.py  utils.py
src/calidad_pqrs/models/: predict.py  preprocessing_causes.py  preprocessing_process.py  train_causes.py  train_process.py  tuning_causes.py  tuning_process.py
